--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/main.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "env-cmd -f .env.test npx jest"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +14,21 @@
     "@prisma/client": "^5.11.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "pg": "^8.11.3",
     "prisma": "^5.11.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.27"
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.28",
+    "@types/pg": "^8.11.2",
+    "@types/supertest": "^6.0.2",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   }
 }
